Invoice-to-details

--- a/src/components/invoice/Create/Create.css
+++ b/src/components/invoice/Create/Create.css
@@ -75,3 +75,11 @@
     display: flex;
     justify-content: space-between;
 }
+
+
+
+.invoice-to-details{
+    max-width: 60%;
+    line-height: 1.8;
+    margin-left: 0.5rem;
+}
