--- a/src/components/dashboard/Main/Navbar.css
+++ b/src/components/dashboard/Main/Navbar.css
@@ -1,13 +1,45 @@
-.dashboard_navbar{
-    /* background-color: #121632; */
-    background-color: var(--background-color);
-    color: var(--text-color);
-    height: 7vh;
-    border-radius: 8px;
-    /* backdrop-filter: blur(6px); */
-    box-shadow: 0 2px 6px rgba(var(--box-shadow),.14),0 0 transparent,0 0 transparent;
-    display: flex;
-    align-items: center;
-    flex-direction: row-reverse;
-    padding-right: 2rem;
+.dashboard_navbar {
+  /* background-color: #121632; */
+  background-color: var(--background-color);
+  color: var(--text-color);
+  /* height: 30%; */
+  border-radius: 8px;
+  /* backdrop-filter: blur(6px); */
+  box-shadow: 0 2px 6px rgba(var(--box-shadow), 0.14), 0 0 transparent,
+    0 0 transparent;
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  padding-right: 2rem;
+  flex: 0 0 8%;
+  position: sticky;
+  top: 0;
+  z-index: 11;
+  gap: 1rem;
+}
+
+.dashboard_navbar::after {
+  position: absolute;
+  z-index: -1;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(
+    180deg,
+    rgba(37, 41, 60, 70%) 44%,
+    rgba(37, 41, 60, 43%) 73%,
+    rgba(37, 41, 60, 0%)
+  );
+  background-repeat: repeat;
+  block-size: 1rem;
+  content: "";
+  inset-block-start: -1rem;
+  inset-inline-end: 0;
+  inset-inline-start: 0;
+  /* -webkit-mask: linear-gradient(black, black 18%, transparent 100%); */
+}
+
+.navbar_user_avatar {
+  width: 3.5%;
+  border-radius: 50px;
+  cursor: pointer;
 }
