--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Public+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans&display=swap");
 
 .asideChild1-3 {
   font-size: 1.25rem;
@@ -12,8 +12,8 @@
 }
 
 .drawer_header {
-  font-family: 'Public Sans', sans-serif;
-  color: #9DC4FF;
+  font-family: "Public Sans", sans-serif;
+  color: #9dc4ff;
   font-size: 1.2rem;
   transition-duration: 400ms;
   display: flex;
@@ -22,8 +22,8 @@
 }
 
 .drawer_header_close {
-  font-family: 'Public Sans', sans-serif;
-  color: #9DC4FF;
+  font-family: "Public Sans", sans-serif;
+  color: #9dc4ff;
   font-size: 1.2rem;
   display: flex;
   justify-content: center;
@@ -37,16 +37,17 @@
 
 /* ------------------------------------------sidebar----------------------------------------------------- */
 
-
 .dashboard_sidebar_open {
-  font-family: 'Public Sans', sans-serif;
+  font-family: "Public Sans", sans-serif;
   width: 18vw;
   height: 100vh;
   transition-duration: 400ms;
   /* background-color: #121632; */
   background-color: var(--background-color);
   color: var(--text-color);
-  box-shadow: 0 2px 6px rgba(var(--box-shadow),.14),0 0 transparent,0 0 transparent;
+  box-shadow: 0 2px 6px rgba(var(--box-shadow), 0.14), 0 0 transparent,
+    0 0 transparent;
+  overflow-y: scroll;
   /* color: white; */
 }
 
@@ -64,7 +65,6 @@
 }
 
 .sidebar_header {
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -86,7 +86,7 @@
   padding: 0% 5% 2% 5%;
 }
 
-.sidebar_dashboard_close{
+.sidebar_dashboard_close {
   padding: 0% 5% 2% 5%;
   display: flex;
   flex-direction: column;
@@ -104,8 +104,12 @@
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: rgba(101,118,134,0.2); */
   /* background-color: #7367F0; */
-  background: linear-gradient(72.47deg,rgb(115,103,240) 22.16%,rgba(115,103,240,.7) 76.47%);
-  box-shadow: 0 2px 6px rgba(115,103,240,.48);
+  background: linear-gradient(
+    72.47deg,
+    rgb(115, 103, 240) 22.16%,
+    rgba(115, 103, 240, 0.7) 76.47%
+  );
+  box-shadow: 0 2px 6px rgba(115, 103, 240, 0.48);
   font-weight: 500;
   color: #ffffff;
 }
@@ -129,8 +133,12 @@
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: rgba(101,118,134,0.2); */
   /* background-color: #7367F0; */
-  background: linear-gradient(72.47deg,rgb(115,103,240) 22.16%,rgba(115,103,240,.7) 76.47%);
-  box-shadow: 0 2px 6px rgba(115,103,240,.48);
+  background: linear-gradient(
+    72.47deg,
+    rgb(115, 103, 240) 22.16%,
+    rgba(115, 103, 240, 0.7) 76.47%
+  );
+  box-shadow: 0 2px 6px rgba(115, 103, 240, 0.48);
   font-weight: 500;
   color: #ffffff;
 }
@@ -154,13 +162,12 @@
 .sidebar_list_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: grey; */
-  background-color: #34384E;
+  background-color: #34384e;
   /* background-color: red; */
   /* color: white; */
   /* opacity: 20%; */
   cursor: pointer;
 }
-
 
 .sidebar_dashboard_child_close {
   /* width:90%; */
@@ -175,7 +182,7 @@
 .sidebar_dashboard_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: grey; */
-  background-color: #34384E;
+  background-color: #34384e;
   /* background-color: red; */
   /* color: white; */
   /* opacity: 20%; */
@@ -190,7 +197,7 @@
   border-radius: 8px;
 }
 
-.sidebar_analytics_child_open_selected{
+.sidebar_analytics_child_open_selected {
   display: flex;
   padding: 4% 2%;
   align-items: center;
@@ -199,8 +206,12 @@
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: rgba(101,118,134,0.2); */
   /* background-color: #7367F0; */
-  background: linear-gradient(72.47deg,rgb(115,103,240) 22.16%,rgba(115,103,240,.7) 76.47%);
-  box-shadow: 0 2px 6px rgba(115,103,240,.48);
+  background: linear-gradient(
+    72.47deg,
+    rgb(115, 103, 240) 22.16%,
+    rgba(115, 103, 240, 0.7) 76.47%
+  );
+  box-shadow: 0 2px 6px rgba(115, 103, 240, 0.48);
   font-weight: 500;
   color: #ffffff;
 }
@@ -219,8 +230,8 @@
 .sidebar_analytics_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: grey; */
-  
-  background-color: #34384E;
+
+  background-color: #34384e;
   /* opacity: 20%; */
   cursor: pointer;
 }
@@ -253,7 +264,7 @@
 .sidebar_calender_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: red; */
-  background-color: #34384E;
+  background-color: #34384e;
   /* color: white; */
   /* opacity: 20%; */
   cursor: pointer;
@@ -269,11 +280,12 @@
   border-radius: 8px;
 }
 
-.sidebar_invoice_child_1, .sidebar_invoice_child_2{
+.sidebar_invoice_child_1,
+.sidebar_invoice_child_2 {
   flex: 0 0 auto;
 }
 
-.sidebar_invoice_child_3{
+.sidebar_invoice_child_3 {
   flex: 0 0 auto;
   margin-left: auto;
 }
@@ -291,7 +303,7 @@
 .sidebar_invoice_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: red; */
-  background-color: #34384E;
+  background-color: #34384e;
   /* color: white; */
   /* opacity: 20%; */
   cursor: pointer;
@@ -321,18 +333,10 @@
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: red; */
   /* color: white; */
-  background-color: #34384E;
+  background-color: #34384e;
   /* opacity: 20%; */
   cursor: pointer;
 }
-
-
-
-
-
-
-
-
 
 .apps_and_pages_invoice_wrapper {
   margin-top: 10%;
@@ -363,7 +367,6 @@
   gap: 0.5rem;
 }
 
-
 /* .apps_and_pages_invoice_wrapper_heading{
   display: flex;
   justify-content: space-between;
@@ -374,20 +377,18 @@
   padding-left: 6%;
 } */
 
-
 .dashboard_heading {
   /* width: 80%; */
   /* padding: 4% 2 ; */
   opacity: 0.8;
   font-size: 0.9rem;
-  color: #63699E;
+  color: #63699e;
   margin-bottom: 2%;
 }
 
 /* .dashboard_hr_1{
   padding-bottom: 20%;
 } */
-
 
 /* .apps_and_pages_invoice_wrapper_calender{
   padding: 2% 6%;
@@ -403,8 +404,6 @@
   /* padding-left: 8%; */
   /* width: 85%; */
 }
-
-
 
 .sidebar_invoice_dropdown {
   transform: translateY(0%);
