--- a/src/pages/DashboardPage.css
+++ b/src/pages/DashboardPage.css
@@ -1,16 +1,18 @@
-.dashboard_page_main{
-    display: flex;
-    background-color: var(--parent-dash-bg-color);
-    gap: 2%;
-    padding-right: 2%;
+.dashboard_page_main {
+  display: flex;
+  background-color: var(--parent-dash-bg-color);
+  gap: 2%;
+  padding-right: 2%;
 }
 
-.dashboard_page_right{
-    flex: 1;
-    overflow-y: scroll ;
-    background-color: var(--parent-dash-bg-color);
-    padding-top: 1%;
-    display: flex;
-    flex-direction: column;
-    gap: 2%;
+.dashboard_page_right {
+  flex: 1;
+  overflow-y: scroll;
+  height: 100vh;
+  background-color: var(--parent-dash-bg-color);
+  padding-top: 1%;
+  display: flex;
+  flex-direction: column;
+  gap: 2%;
+  padding-bottom: 2%;
 }
