--- a/src/styles.css
+++ b/src/styles.css
@@ -11,16 +11,16 @@
 }
 
 :root {
-  --background-color: #1c2034;
+  --background-color: #2f3349;
   /* --parent-bg-color: #1c2034; */
-  --parent-dash-bg-color: #121632;
-  --text-color: #9EA2BD;
+  --parent-dash-bg-color: #25293c;
+  --text-color: #9ea2bd;
   --box-shadow: 40, 43, 46;
 }
 
 .light-mode {
   --background-color: #fafafa;
-  --parent-dash-bg-color: #F4F3F6;
-  --text-color: #706D7A;
+  --parent-dash-bg-color: #f4f3f6;
+  --text-color: #706d7a;
   --box-shadow: 15, 20, 34;
 }
