--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -49,6 +49,151 @@
   color: rgba(208, 212, 241, 0.78);
 }
 
+.invoice_create_hr1 {
+  opacity: 0.16;
+  border-width: thin 0 0 0;
+}
+
+.invoice_create_left_second {
+  line-height: 1.5;
+  font-size: 0.9375rem;
+  /* font-weight: 400; */
+  /* letter-spacing: normal; */
+  padding: 1.5rem;
+  text-transform: none;
+  row-gap: 1.25rem;
+  gap: 1rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.invoice_create_ls_1 {
+  inline-size: 15.5rem;
+}
+
+.invoice_create_ls_1_heading {
+  font-size: 0.9375rem;
+  line-height: 1.3125rem;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  color: rgba(208, 212, 241, 0.78);
+}
+
+.invoice_create_left_third {
+  line-height: 1.5;
+  font-size: 0.9375rem;
+  /* font-weight: 400; */
+  /* letter-spacing: normal; */
+  padding: 1.5rem;
+  text-transform: none;
+}
+
+.invoice_create_lt_child1 {
+  padding-inline-end: 4rem;
+  padding-inline-start: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+.invoice_create_lt_child1_gChild {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  margin: -12px;
+  font-weight: 500;
+}
+
+.invoice_create_lt_child1_gChild_1 {
+  /* width: 100%; */
+  padding: 0.75rem;
+  font-size: 0.9375rem;
+  line-height: 1.3125rem;
+}
+
+.invoice_create_lt_child1_gChild_2,
+.invoice_create_lt_child1_gChild_3,
+.invoice_create_lt_child1_gChild_4 {
+  /* width: 100%; */
+  padding: 0.75rem;
+  font-size: 0.9375rem;
+  line-height: 1.3125rem;
+}
+
+.invoice_create_lt_child2 {
+  color: rgba(208, 212, 241, 0.68);
+  border-width: thin;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  position: relative;
+  /* padding: 0; */
+  text-decoration: none;
+  /* transition-duration: 0.28s;
+  transition-property: box-shadow, opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  /* z-index: 0; */
+  border-color: rgba(208, 212, 241, 0.16);
+  border-style: solid;
+  /* border-width: 0; */
+  border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+}
+
+.invoice_create_lt_child2_1 {
+  padding: 1.25rem;
+  flex-grow: 1;
+}
+
+.invoice_create_lt_child2_1_gchild1,
+.invoice_create_lt_child2_1_gchild2,
+.invoice_create_lt_child2_1_gchild3,
+.invoice_create_lt_child2_1_gchild4 {
+  padding: 0.75rem;
+}
+
+.invoice_create_label {
+  align-items: center;
+  display: inline-flex;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.25rem;
+  text-transform: none;
+  margin-bottom: 4px;
+}
+
+.invoice_create_lt_child2_2 {
+  border-inline-start-width: thin;
+  border-inline-start-style: solid;
+  border-inline-start-color: rgba(208, 212, 241, 0.16);
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.invoice_create_select_1 {
+  background-color: #2f3349;
+  width: 100%;
+  height: 7vh;
+  border-radius: 4px;
+  border-color: #6a6f86;
+  /* padding-right: 12px; */
+}
+.invoice_create_select_1:focus {
+  border-color: #7367f0;
+}
+.invoice_create_select_1:focus-visible {
+  border-color: #7367f0;
+}
+
+.create_option {
+  background-color: red !important;
+}
+
 @media (min-width: 600px) {
   .invoice_create_left_first {
     flex-direction: row;
@@ -56,11 +201,51 @@
   .invoice_create_lf_2_child1 {
     justify-content: flex-end;
   }
+  .invoice_create_left_second {
+    flex-direction: row;
+  }
+  .invoice_create_ls_1 {
+    margin: 16px;
+  }
+  .invoice_create_lt_1 {
+    margin: 16px;
+  }
+  .invoice_create_lt_child2_1_gchild1,
+  .invoice_create_lt_child2_1_gchild2 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .invoice_create_lt_child3 {
+    margin: 16px;
+  }
 }
 
 @media (min-width: 960px) {
   .invoice_create_child_left {
     flex: 0 0 75%;
     max-width: 75%;
+  }
+  .invoice_create_lt_child1 {
+    display: flex;
+  }
+  .invoice_create_lt_child1_gChild_1 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .invoice_create_lt_child1_gChild_2,
+  .invoice_create_lt_child1_gChild_3,
+  .invoice_create_lt_child1_gChild_4 {
+    flex: 0 0 16.6%;
+    max-width: 16.6%;
+  }
+  .invoice_create_lt_child2_1_gchild1 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .invoice_create_lt_child2_1_gchild2,
+  .invoice_create_lt_child2_1_gchild3,
+  .invoice_create_lt_child2_1_gchild4 {
+    flex: 0 0 16.6%;
+    max-width: 16.6%;
   }
 }
