--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -179,6 +179,8 @@
   background-color: #2f3349;
   width: 100%;
   height: 7vh;
+  /* font-size: 2.4rem; */
+  /* padding: 2rem; */
   border-radius: 4px;
   border-color: #6a6f86;
   /* padding-right: 12px; */
@@ -190,9 +192,10 @@
   border-color: #7367f0;
 }
 
-.create_option {
-  background-color: red !important;
-}
+/* .invoice_create_select_1 options{
+  background-color: red;
+} */
+
 
 @media (min-width: 600px) {
   .invoice_create_left_first {
