--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -278,3 +278,17 @@
     max-width: 16.6%;
   }
 }
+
+.invoice_create_child_right{
+  display: flex;
+  height: 30vh;
+  /* width: ; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding:8%;
+}
+.invoice_create_child_right1 div{
+  display: flex;
+  padding:5%;
+}
