--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -48,9 +48,17 @@
   line-height: 1.875rem;
   margin-bottom: 12px;
   display: flex;
+  /* gap:2rem; */
+  /* flex-direction: column; */
+
+  justify-content:space-evenly;
   align-items: center;
   color: rgba(208, 212, 241, 0.78);
 }
+.invoice_create_lf_2_child1 span{
+  width:45%;
+}
+
 
 .invoice_create_hr1 {
   opacity: 0.16;
