--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -284,7 +284,7 @@
   }
   .invoice_create_child_right {
     flex: 0 0 25%;
-    max-width: 25%;
+    /* max-width: 25%; */
     /* margin-top: 200px; */
   }
 }
