Light Mode in Create Section

--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -26,6 +26,29 @@
   border-radius: 6px;
   box-shadow: 0 4px 18px rgba(15, 20, 34, 0.1), 0 0 transparent, 0 0 transparent;
 }
+.invoice_create_child_left_light {
+  /* width: 100%; */
+  /* flex:0.8; */
+  background: red;
+  /* background: rgb(47, 51, 73); */
+  color: rgba(208, 212, 241, 0.68);
+
+  /* display: block; */
+  overflow: hidden;
+  overflow-wrap: break-word;
+  position: relative;
+  /* padding: 0; */
+  text-decoration: none;
+  /* transition-duration: 0.28s;
+  transition-property: box-shadow, opacity; */
+  /* transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  /* z-index: 0; */
+  border-color: rgba(208, 212, 241, 0.16);
+  border-style: solid;
+  border-width: 0;
+  border-radius: 6px;
+  box-shadow: 0 4px 18px rgba(15, 20, 34, 0.1), 0 0 transparent, 0 0 transparent;
+}
 
 .invoice_create_left_first {
   line-height: 1.5;
