--- a/src/components/landing/Navbar/Navbar.css
+++ b/src/components/landing/Navbar/Navbar.css
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+
 .nav {
+  font-family: "Inter", sans-serif;
   background-color: transparent;
   color: white;
   /* height: 13vh; */
-  padding-top: 2%;
-  padding-bottom: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
   display: flex;
   justify-content: space-between;
   align-items: center;
