--- a/src/components/invoice/Create/CreateTest.css
+++ b/src/components/invoice/Create/CreateTest.css
@@ -268,6 +268,9 @@
   .invoice_create_lt_child3 {
     margin: 16px;
   }
+  .invoice_create_lt_child1 {
+    display: none;
+  }
 }
 
 @media (max-width: 959px) {
