--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-*{
+.loginContainer{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-}
-
-body{
     background-color: #c9d6ff;
     background: linear-gradient(to right, #e2e2e2, #c9d6ff);
     display: flex;
@@ -207,4 +204,4 @@ body{
 
 .container.active .toggle-right{
     transform: translateX(200%);
-}
+} 
