Removed Old Create Code

--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -25,6 +25,13 @@
     min-height: 480px;
 }
 
+@media screen and (max-width: 600px) {
+    #container {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
 .container p{
     font-size: 14px;
     line-height: 20px;
